Fixed thumbnail alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -9,6 +9,7 @@ body {
     margin-left: 0px;
     font-style: normal;
     font-weight: 200;
+    min-width: 1200px;
 }
 /* Container */
 .container {
@@ -64,6 +65,12 @@ nav {
     text-align: right;
     /* [disabled]margin-right: 25px; */
 }
+.hero.utra {
+    background-image: url("../images/TB%20(UTRA).JPG");
+    background-repeat: no-repeat;
+    background-position: center -124px;
+}
+
 ul   {
     list-style: none;
     float: right;
@@ -100,25 +107,41 @@ ul li:hover a {
     height: auto;
     z-index: 2;
     position: relative;
+    background-size: auto auto;
 }
 /* Hero Section */
 .hero {
-    background-color: #566FD1;
-    /* [disabled]padding-top: 150px; */
+    padding-top: 300px;
     /* [disabled]padding-bottom: 150px; */
     background-attachment: fixed;
     height: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     align-content: center;
     /* [disabled]animation: bgScroll 30s linear infinite; */
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+    /* [disabled]position: relative; */
     z-index: 10;
     overflow: hidden;
+    background-size: 2000px auto;
 }
+.hero.main {
+    background-image: url(../images/Banner.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+.container .hero div {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+
 .bk_parallax {
     position: absolute;
     z-index: 1;
@@ -163,6 +186,7 @@ section {
     letter-spacing: 1px;
     z-index: 2;
     position: relative;
+    display: block;
 }
 p {
     color: #FEC05D;
@@ -671,6 +695,7 @@ nav ul li {
     font-weight: 500;
     height: auto;
     font-size: 24px;
+    min-width: 0px;
 }
 h4 {
     padding-left: 50px;
@@ -704,6 +729,7 @@ projects .style1 .subtitle_dark {
 }
 
 h2 {
+    display: block;
 
 }
 h3 {
